--- a/project-2/index.html
+++ b/project-2/index.html
@@ -21,7 +21,7 @@
       </header>
       <hr />
       <h2> Grandma Carole's Poorman's Stroganoff</h2>
-      <p> <strong> You will need</strong> <br />
+      <p> <strong> You will need</strong><p> <br />
         <ul>
           <li>18 inch frying pan</li>
           <li>Large pot for boiling</li>
@@ -35,15 +35,15 @@
           <li>2 cups large elbow macaroni or large shell noodles</li>
           <li>1 bag of shredded cheddar cheese (16oz)
           <ul>
-    The recipe itself is super easy and has a few huge perks:
+  <p> <h3>The recipe itself is super easy and has a few huge perks:<h3></p>
     <ol>
       <li><strong>Cheap</strong>: All together the ingredients should cost around $10.</li>
       <li><strong>Customizable</strong>: The recipe can be altered or seasoned to fit anyones preferences.</li>
       <li><strong>Size</strong>: The recipe makes enough to feed 5 or 6 people depending on portion size. </li>
         <ol>
-    If you make a side the meal will stretch <em>even</em> further. Any leftovers can be put in the fridge, because of the simple ingredients
+  <p>  If you make a side the meal will stretch <em>even</em> further. Any leftovers can be put in the fridge, because of the simple ingredients
     it tastes just as good reheated as it did fresh.</p>
 
-    <p> From my family to yours, please enjoy.-<strong>Dakota Wharry</strong>
+    <p> From my family to yours, please enjoy.-<strong>Dakota Wharry</strong></p>
     </body>
     </html>
