--- a/project-2/index.html
+++ b/project-2/index.html
@@ -34,15 +34,15 @@
           <li>8 oz sour cream</li>
           <li>2 cups large elbow macaroni or large shell noodles</li>
           <li>1 bag of shredded cheddar cheese (16oz)
-          <ul>
+          <ul><br />
   <p> <h3>The recipe itself is super easy and has a few huge perks:<h3></p>
     <ol>
       <li><strong>Cheap</strong>: All together the ingredients should cost around $10.</li>
       <li><strong>Customizable</strong>: The recipe can be altered or seasoned to fit anyones preferences.</li>
       <li><strong>Size</strong>: The recipe makes enough to feed 5 or 6 people depending on portion size. </li>
-        <ol>
+        <ol><br />
   <p>  If you make a side the meal will stretch <em>even</em> further. Any leftovers can be put in the fridge, because of the simple ingredients
-    it tastes just as good reheated as it did fresh.</p>
+    it tastes just as good reheated as it did fresh.</p><br />
 
     <p> From my family to yours, please enjoy.-<strong>Dakota Wharry</strong></p>
     </body>
