--- a/project-2/index.html
+++ b/project-2/index.html
@@ -35,7 +35,7 @@
           <li>2 cups large elbow macaroni or large shell noodles</li>
           <li>1 bag of shredded cheddar cheese (16oz)
           </ul><br />
-   <h3>The recipe itself is super easy and has a few huge perks:<h3>
+   <h3>The recipe itself is super easy and has a few huge perks:</h3>
     <ol>
       <li><strong>Cheap</strong>: All together the ingredients should cost around $10.</li>
       <li><strong>Customizable</strong>: The recipe can be altered or seasoned to fit anyones preferences.</li>
