--- a/project-2/index.html
+++ b/project-2/index.html
@@ -45,5 +45,7 @@
     it tastes just as good reheated as it did fresh.</p><br />
 
     <p> From my family to yours, please enjoy.-<strong>Dakota Wharry</strong></p>
+
+    <a href="./pages/instructions.html">Proceed to the recipe</a>
     </body>
-    </html>
+</html>
