--- a/project-2/pages/form.html
+++ b/project-2/pages/form.html
@@ -26,7 +26,7 @@
     <select name="Age Range" id="Age">
       <option value="Under18">Under 18</option>
       <option value="18-30">18-30</option>
-      <option value="30andUp">30 or Above</option>
+      <option value="30andUp">30 or Above</option> </p>
 </fieldset>
 <fieldset>
   <legend>Share Your Experience</legend>
@@ -53,6 +53,8 @@
 <input type="submit" value="Submit Response" />
 <hr />
       <ul>
-        <li><a href="./instructions.html">Back to Recipe</a></li>
-        <li><a href="../index.html">Back to Home</a></li>
+        <li><a href=".pages/instructions.html">Back to Recipe</a></li>
+        <li><a href="./index.html">Back to Home</a></li>
       </ul>
+
+    </html>
