--- a/project-2/pages/instructions.html
+++ b/project-2/pages/instructions.html
@@ -65,7 +65,7 @@ it should be good for several days if kept cold)</pre></li>
 </ol>
 
 <ul>
-  <li><a href="/form.html">Share your story!</a></li>
+  <li><a href=".pages/form.html">Share your story!</a></li>
   <li><a href="/index.html">Back to Home</a></li>
 </ul>
 </body>
