--- a/project-2/pages/form.html
+++ b/project-2/pages/form.html
@@ -53,7 +53,7 @@
 <input type="submit" value="Submit Response" />
 <hr />
       <ul>
-        <li><a href=".pages/instructions.html">Back to Recipe</a></li>
+        <li><a href="./pages/instructions.html">Back to Recipe</a></li>
         <li><a href="./index.html">Back to Home</a></li>
       </ul>
 
