--- a/project-2/index.html
+++ b/project-2/index.html
@@ -10,7 +10,7 @@
     <style>
     body {background-color: powderblue;}
     </style>
-    <head>
+  </head>
       <!--At first I struggled with coming up with a good topic form my instructable.-->
       <!--But I ended up on this recipe. Because what better thing to share than a cheap easy recipe great for families or even just a busy student.-->
     <header> <h1> How to make <em>Poor man's stroganoff</em> </h1>
@@ -21,7 +21,7 @@
       </header>
       <hr />
       <h2> Grandma Carole's Poorman's Stroganoff</h2>
-      <p> <strong> You will need</strong><p> <br />
+      <p> <strong> You will need</strong></p> <br />
         <ul>
           <li>18 inch frying pan</li>
           <li>Large pot for boiling</li>
@@ -30,10 +30,10 @@
           <li>1 pound of ground beef</li>
           <li>1 can cream of chicken</li>
           <li>1 can cream of mushroom</li>
-          <li>1 can of corn or green beans
+          <li>1 can of corn or green beans</li>
           <li>8 oz sour cream</li>
           <li>2 cups large elbow macaroni or large shell noodles</li>
-          <li>1 bag of shredded cheddar cheese (8 oz)
+          <li>1 bag of shredded cheddar cheese (8 oz)</li>
           </ul><br />
    <h3>The recipe itself is super easy and has a few huge perks:</h3>
     <ol>
