--- a/project-2/pages/more-info.html
+++ b/project-2/pages/more-info.html
@@ -11,5 +11,10 @@
   body {background-color: powderblue;}
   </style>
 </head>
+<header>
+  <h1>More Easy Recipes</h1>
+</header>
+If you enjoyed the casserole recipe be sure to try some of these recipes as well. They're all pretty easy and quick to make, and you're likely to have leftovers too!
+<iframe width="560" height="315" src="https://www.youtube.com/embed/FNGkl0up59g" frameborder="0" allowfullscreen></iframe>
 </body>
 </html>
