--- a/project-2/pages/about.html
+++ b/project-2/pages/about.html
@@ -53,6 +53,7 @@
   32 Campus Dr <br />
   Missoula, MT 59812
 </address>
+<iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d10913.65452290675!2d-113.99817661316361!3d46.855231890027575!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sUniversity+of+Montana!5e0!3m2!1sen!2sus!4v1508996036455" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 </fieldset>
 </body>
 </html>
