--- a/project-2/pages/instructions.html
+++ b/project-2/pages/instructions.html
@@ -17,7 +17,7 @@ body {background-color: powderblue;}
 <style>
    table, th, td {border: 1px solid black; border-collapse: collapse; }
 </style>
-<img src="images/Plate.JPG" alt="Poorman's Stroganoff, a simple comfort food casserolle big enough for the whole family." title="Poorman's Stroganoff" width="320" height="320" align="right" />
+<img src="../images/Plate.JPG" alt="Poorman's Stroganoff, a simple comfort food casserolle big enough for the whole family." title="Poorman's Stroganoff" width="320" height="320" align="right" />
     <table>
       <tr>
         <th></th>
@@ -38,7 +38,7 @@ body {background-color: powderblue;}
       </tr>
     </table>
 <h2>Ingredients</h2>
-<img src="images/Ingredients.JPG" alt="All the ingredients for Poorman's Stroganoff, in total the meal costs an average of $10 or less to make." title="Ingredients for the casserole" width="320" height="240" align="right" />
+<img src="../images/Ingredients.JPG" alt="All the ingredients for Poorman's Stroganoff, in total the meal costs an average of $10 or less to make." title="Ingredients for the casserole" width="320" height="240" align="right" />
 <pre>
   1 <abbr title="pound">lb.</abbr> ground beef
   1 can cream of chicken
@@ -58,7 +58,7 @@ body {background-color: powderblue;}
   <li>Stir beef and pasta in with the rest of the ingredients</li>
   <li>Pour mixed indgredients into large casserole pan and spread cheese evenly across top to form layer</li>
   <li>Put in oven for 45 mins or until cheese is melted and bubly
-  <img src="images/Prep.JPG" alt="At this point all that's left is to put the dish in the oven, or cover it and put it in the fridge for later." title="Fully prepared caserole, before oven." width="320" height="240" align="right" />
+  <img src="../images/Prep.JPG" alt="At this point all that's left is to put the dish in the oven, or cover it and put it in the fridge for later." title="Fully prepared caserole, before oven." width="320" height="240" align="right" />
 <pre>(If you plan to cook it later simply cover it and place it in the fridge,
 it should be good for several days if kept cold)</pre></li>
   <li>Let cool and settle on countertop for 10 mins before serving, then enjoy!</li>
