--- a/project-3/pages1/sample.html
+++ b/project-3/pages1/sample.html
@@ -32,27 +32,19 @@
 
         <h2>Exerpt from the book</h2>
 
-        <div class="paragraph-1">
-        <p align"center">"There's the satisfaction of facing huge physical and mental challenges.
-          The undeniable excitement of danger. The camaraderie, and the love/hate
-          relationship that comes from depending on others for your life and vice
-          versa."-Jason A. Ramos pg 212</p>
-        </div>
-
-        <div class="paragraph-2">
-        <p align"center">"This job is notorious for the strain it puts on relationships. Dating a
-          firefighter or smokejumper sounds exciting, and in the short term often is.
-          But the appeal of your partner being called away constantly to do dangerous
-          work at a moments notice, to who knows where and for who knows how long,
-          quickly wears thin."-Jason A. Ramos pg 211</p>
+        <div class="parent-container">
+        <p align"center">"How five crows managed to lift a twenty-pound baby boy into the air was beyond Prue, but that was certainly the least of her worries.
+          In fact, if she were to list her worries right then and there as she sat spellbound on the park bench and watched her little brother, Mac, carried aloft
+          in the talons of these five black crows, puzzling out just <em>how</em> this feat was being done would likely come in dead last.
+          First on the list: Her baby brother, her responsibility, was being abducted by birds. A close second: <em>What did they plan on doing with him?"</em>- <em>Wildwood</em> pg. 1</p>
         </div>
 
         </main>
 
         <center>
 
-        <img src="../images/wildfire.jpg" alt="Photo of deer in wildfire" title="Wildfire">
-        <!--Image source:https://upload.wikimedia.org/wikipedia/commons/thumb/d/d8/Deerfire_high_res_edit.jpg/1200px-Deerfire_high_res_edit.jpg-->
+        <img src="../images/Baby.jpg" alt="Illustration" title="Mac being carried away">
+        <!--Image source:https://www.pinterest.com/pin/190347521720409545/?lp=true-->
 
       </center>
         <footer>
