--- a/project-3/pages1/contact.html
+++ b/project-3/pages1/contact.html
@@ -8,27 +8,22 @@
   <!--Link of styles and fonts -->
   <link rel="stylesheet" href="../css/style.css">
   <link rel="stylesheet" href="../css/fonts.css">
-
   <!--Title-->
   <title>Smokejumper</title>
 </head>
-
-<h1><strong>Contact the Author</strong></h1></header>
+<body>
+<h1><strong>Contact the Author</strong></h1>
 <div class="content">
   <main>
-
-
-
-    <h2>Contact Jason</h2>
+    <h2>Contact Colin and Carson</h2>
     <div class="paragraph-1">
-      <p>Thank you for being interested in this book. I can assure it is a great read. If you have any questions about
-        his adventures or his book, enter your comment in the comment box and
-        provide your email address. <div class="element-1"><a href="https://www.amazon.com/Smokejumper-Memoir-Americas-Airborne-Firefighters/dp/0062319639">Order the book here.</a></div></p>
-
+      <p>Thank you for being interested in this book. If you have any questions about
+        the book, enter your comments in the comment box and
+        provide your email address. <div class="element-1"><a href="https://www.amazon.com/Wildwood-Chronicles-Book-1-ebook/dp/B004QWZC9W/ref=sr_1_1?ie=UTF8&qid=1510909360&sr=8-1&keywords=wildwood">Order the book here.</a></div></p>
       </div>
+    </div>
+
     </main>
-
-
 <form action="https://www.example.com"method="post" id="example-form" class="form-class">
   <p>Comments?</p>
   <textarea name="comments" cols="4" rows="4" style="min-width:100%">
@@ -37,7 +32,7 @@
   <h8>Email Address</h8>
   <p>
      Email:
-     <input type="text" name="email" placeholder="johnnyapplesead@gmail.com" autofocus/>
+     <input type="text" name="email" placeholder="Example@gmail.com" autofocus/>
    </p>
  </form>
 
