--- a/project-3/index.html
+++ b/project-3/index.html
@@ -15,26 +15,29 @@
 
 
 <body>
-  <header> <h1><strong>Smokejumper</strong></h1></header>
+  <header> <h1><strong>WILDWOOD</strong></h1></header>
   <div class="content">
     <main>
 
 
       <div class="parent-container">
-      <h2>Introduction</h2>
+      <h2>Summary</h2>
       <div class="paragraph-1">
 
-        <p align"center">I stumbled across this book one day walking through a bookstore in Missoula,
-          something that I rarely do. Something even more rarer happened, I bought the book.
-          The book is <em id="heading-3">Smokejumper</em> by Jason A. Ramos and Julian Smith.
-          It is a memoir about how Jason became to be the man, firefighter, husband, and many more traits that he is today. He writes about all of his hardships and good-times of becoming a smokejumper. For those who don't know what a smokejumper is, they are highly trained firefighters who jump out of planes in some of the most remote places in the country to fight and put out wildfires. They are highly trained profestionals and are well respected in the fire community. Being a wildland firefighter, this book touched a lot of nerves in a sad way and in good ways as well. People who aren't wildland firefighters or don't know anyone who is don't really know what we do or what we go through day by day on the fireline. This book is a great read for firefighters and non-firefighters alike.</p>
+        <p align"center">
+          Prue McKneel's life is ordinary. That is, until her brother is abducted by a murder of crows and taken to the <strong>Impassable Wilderness</strong>
+        , a dense, tangled forest on the edge of Portland. No one's ever gone in--or at least returned to tell of it. <br />
+        So begins an adventure that will take Prue and her friend Curtis deep into the Impassable Wilderness. There they uncover a secret world in the midst of violent upheaval--a world full of warring creatures, peacable mystics, and powerful figures with the darkest intentions.
+        And what begins as a rescue mission becomes something much greater as the two friends find themselves entwined in a strugle
+        for the very freedom of this wilderness. A wilderness the locals call <em id="heading-3">Wildwood</em>
+        </p>
 
         </div> </div>
       </main>
 
       <center>
-        <p><img src="./images/smokejumperimage.jpg" alt="cover"></p>
-        <!--Source of picture: https://www.amazon.com/Smokejumper-Memoir-Americas-Airborne-Firefighters/dp/0062319639-->
+        <p><img src="./images/WildwoodCover.jpg" alt="cover"></p>
+        
       </center>
 
       <footer>
