--- a/project-3/index.html
+++ b/project-3/index.html
@@ -12,7 +12,7 @@
   <!--Title of page-->
   <title>Smokejumper</title>
 </head>
-
+jhjhgij
 
 <body>
   <header> <h1><strong>WILDWOOD</strong></h1></header>
@@ -37,7 +37,7 @@
 
       <center>
         <p><img src="./images/WildwoodCover.jpg" alt="cover"></p>
-        
+
       </center>
 
       <footer>
