--- a/project-3/index.html
+++ b/project-3/index.html
@@ -3,16 +3,16 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, intial-scale=1">
-  <meta name="author" content="Andrew Martinez">
+  <meta name="author" content="Dakota Wharry">
   <meta name="desription" content="Introduction">
   <!--Link of styles-->
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/fonts.css">
 
   <!--Title of page-->
-  <title>Smokejumper</title>
+  <title>WILDWOOD</title>
 </head>
-jhjhgij
+
 
 <body>
   <header> <h1><strong>WILDWOOD</strong></h1></header>
@@ -24,7 +24,7 @@ jhjhgij
       <h2>Summary</h2>
       <div class="paragraph-1">
 
-        <p align"center">
+        <p align="center">
           Prue McKneel's life is ordinary. That is, until her brother is abducted by a murder of crows and taken to the <strong>Impassable Wilderness</strong>
         , a dense, tangled forest on the edge of Portland. No one's ever gone in--or at least returned to tell of it. <br />
         So begins an adventure that will take Prue and her friend Curtis deep into the Impassable Wilderness. There they uncover a secret world in the midst of violent upheaval--a world full of warring creatures, peacable mystics, and powerful figures with the darkest intentions.
@@ -34,7 +34,7 @@ jhjhgij
 
         </div> </div>
       </main>
-
+</div>
       <center>
         <p><img src="./images/WildwoodCover.jpg" alt="cover"></p>
 
