--- a/project-3/pages/about.html
+++ b/project-3/pages/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, intial-scale=1">
-  <meta name="author" content="Colin">
+  <meta name="author" content="Dakota Wharry">
   <meta name="desription" content="about author">
   <!--Link of styles-->
   <link rel="stylesheet" href="../css/style.css">
@@ -15,7 +15,7 @@
 
 
 <body>
-  <header> <h1><strong>Written by Colin Meloy and Illustrated by Carson Ellis</strong></h1>
+  <header> <h1><strong>Written by Colin Meloy and Illustrated by Carson Ellis</strong></h1></header>
     <div class="content">
       <main>
 
@@ -34,9 +34,8 @@
           Colin and Carson live with their son, Hank, in Portland, Oregon, quite near the Impassable Wilderness. (a large park near their home in Portland)
         </p>
         <!--Source of bios:\http://www.wildwoodchronicles.com/authors-->
-        </div></div>
-
-        </main>
+      </div></div>
+    </main></div>
         <center>
           <p><img src="../images/CarsonandColin.jpg" alt="Photo of Carson and Colin"></p>
           <!--Source of picture:http://www.wildwoodchronicles.com/authors-->
