--- a/project-3/pages/sample.html
+++ b/project-3/pages/sample.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, intial-scale=1">
-  <meta name="author" content="Andrew Martinez">
+  <meta name="author" content="Dakota Wharry">
   <meta name="desription" content="Sample">
   <!--Link of styles and fonts -->
   <link rel="stylesheet" href="../css/style.css">
   <link rel="stylesheet" href="../css/fonts.css">
 
   <!--Title-->
-  <title>Smokejumper</title>
+  <title>WILDWOOD</title>
   <style>
   <div.main-container {
     background-image: image(./images/wildfire.jpg);
@@ -24,7 +24,7 @@
 
 
 <body>
-  <header> <h1><strong>Sample</h1></strong>
+  <header> <h1><strong>Sample</strong></h1></header>
     <div class="content">
       <main>
 
@@ -33,14 +33,14 @@
         <h2>Exerpt from the book</h2>
 
         <div class="parent-container">
-        <p align"center">"How five crows managed to lift a twenty-pound baby boy into the air was beyond Prue, but that was certainly the least of her worries.
+        <p align="center">"How five crows managed to lift a twenty-pound baby boy into the air was beyond Prue, but that was certainly the least of her worries.
           In fact, if she were to list her worries right then and there as she sat spellbound on the park bench and watched her little brother, Mac, carried aloft
           in the talons of these five black crows, puzzling out just <em>how</em> this feat was being done would likely come in dead last.
           First on the list: Her baby brother, her responsibility, was being abducted by birds. A close second: <em>What did they plan on doing with him?"</em>- <em>Wildwood</em> pg. 1</p>
         </div>
 
         </main>
-
+      </div>
         <center>
 
         <img src="../images/Baby.jpg" alt="Illustration" title="Mac being carried away">
