--- a/project-3/pages/contact.html
+++ b/project-3/pages/contact.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="../css/style.css">
   <link rel="stylesheet" href="../css/fonts.css">
   <!--Title-->
-  <title>Smokejumper</title>
+  <title>Contact</title>
 </head>
 <body>
 <h1><strong>Contact the Author</strong></h1>
