--- a/project-4/index.html
+++ b/project-4/index.html
@@ -28,7 +28,7 @@
             <div class="box3">
               <h2 class="Head">Process </h2>
             <p class="Para">By setting your boxes up in a container with flex wrap set up in your css the browser will do most of the work for you.
-            From there you just have to set pixel widths or percentages so the browser knows how wide each box should be. For example the middle three boxes will all fit into one column by setting each box to take up 33% of the width.
+            From there you just have to set pixel widths or percentages so the browser knows how wide each box should be. For example the middle three boxes will all fit into one column by setting the width percentages up so they add to 100%.
           By setting the other two to 100% I can ensure that they are allocated an entire row. But this layout isn't fully realized unless you have a large enough browser window. As the window gets narrower the boxes will shift
           down to the next row to ensure that everything fits well on smaller screens or browsers. </p></div>
 
